--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">StreetBeesCodeChallenge</string>
-    <string name="marvel_api_copyrights">Data retrieved from Marvel 2014 - http://developer.marvel.com/</string>
+    <string name="get_comics_request_failure">Failed to retrieve comics, check your internet connection</string>
+    <string name="marvel_api_copyrights">Data retrieved from Marvel 2014</string>
+    <string name="dot">.</string>
 </resources>
