added current app version number and some refactoring

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="ask_to_change_thumbnail_positive_btn">@string/yes</string>
     <string name="ask_to_change_thumbnail_negative_btn">@string/no</string>
     <string name="header_content_description">cover image</string>
+    <string name="version">v1.0</string>
 
 </resources>
